--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link href="https://fonts.googleapis.com/css?family=Noto+Sans:400,700" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Lobster" rel="stylesheet">
     <link rel="stylesheet" href="animate.css">
+    <link rel="stylesheet" href="animations.css">
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
@@ -35,7 +36,7 @@
             <div class="fix-categories"></div>
             <div class="categories">
               <div class="active-cat">
-                <h3>ПАМЯТНИКИ</h3>
+                <h3>ПАМ'ЯТНИКИ</h3>
               </div>
               <div class="">
                 <h3>СХОДИ</h3>
@@ -76,7 +77,7 @@
                   </div>
                 </div>
                 <div class="cat-text">
-                  <p>Сходи внутрішні, зовнішні (виготовляємо на замовлення за індивідуальними розмірами). Ковані перила у поєднанні з гранітними сходинками мають неповторний вигляд!.</p>
+                  <p>Сходи внутрішні, зовнішні (виготовляємо на замовлення за індивідуальними розмірами). Ковані перила у поєднанні з гранітними сходинками мають неповторний вигляд.</p>
                   <div class="deco-line"></div>
                   <!-- <a class="btn-cat" href="#">ДІЗНАТИСЬ БІЛЬШЕ</a> -->
                 </div>
@@ -155,7 +156,7 @@
                 <div class="why-us-bot-text">
                   <h5>Індивідуальний підхід</h5>
                   <p>До кожного клієнта ми застосовуємо індивідуальний підхід. Пропрацьовуємо,
-                  враховуючи бажання клієнта, при необхідності спроектовуємо разом з клієнтом  мойбутній проект.</p>
+                  враховуючи бажання клієнта, при необхідності спроектовуємо разом з клієнтом  майбутній проект.</p>
                 </div>
               </div>
               <div class="why-us-item">
@@ -164,7 +165,7 @@
                 </div>
                 <div class="why-us-bot-text">
                   <h5>Великій вибір робіт</h5>
-                  <p>Ми пропонуємо широкий ассортимент моделей памятників, будь-яких розмірів,
+                  <p>Ми пропонуємо широкий ассортимент моделей пам'ятників, будь-яких розмірів,
                    а також велике різноманіття кольорів граніту.</p>
                 </div>
               </div>
@@ -174,7 +175,7 @@
                 </div>
                 <div class="why-us-bot-text">
                   <h5>Львів та область</h5>
-                  <p>Ми встановлюємо памятники не тільки у Львові, але також
+                  <p>Ми встановлюємо пам'ятники не тільки у Львові, але також
                   і у області.</p>
                 </div>
               </div>
@@ -188,7 +189,7 @@
                   <img src="img/single-bg.jpg" alt="">
                 </div>
                 <div class="gallery-text">
-                  <h3>Одинарні памятники</h3>
+                  <h3>Одинарні пам'ятники</h3>
                 </div>
 
               </div>
@@ -197,7 +198,7 @@
                   <img src="img/double-bg.jpg" alt="">
                 </div>
                 <div class="gallery-text">
-                  <h3>Подвійні памятники</h3>
+                  <h3>Подвійні пам'ятники</h3>
                 </div>
               </div>
               <div id="stairs">
@@ -257,6 +258,8 @@
                 <div class="contacts-deco-line"></div>
                 <p>097 211 1122</p>
                 <p>svitkamenia@gmail.com</p>
+                <p><a class="facebook" target="_blank" href="https://www.facebook.com/theworldofstoneandmetal/?fref=comp&eid=ARBOaqQZ3PvupYxNC20zU0mgRsDJjdY2mVYWohrpCmY27jMbMnE07PjNUY8aKEW6n8yBXkoXmOhJ6ZTx">facebook</a></p> 
+                <p><a class="instagram" target="_blank" href="https://www.instagram.com/theworld_of_stoneandmetal_/?utm_source=ig_profile_share&igshid=dckgpyq1szyb&fbclid=IwAR23nTr4A-t82En2M1-vHlEi1Tbiahr2m9dSwGoTb_vEE6BYB2wvP4Tvw6U">instagram</a></p> 
               </div>
             </div>
           </div>
