--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
               <div><a href="#header">Головна</a></div>
               <div><a href="#why-us">Про нас</a></div>
               <div><a href="#gallery">Каталоги</a></div>
-              <div><a href="#contacts">Коктакти</a></div>
+              <div><a href="#contacts">Контакти</a></div>
             </div>
           </nav>
           <div class="container-categories">
