--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
                 <div class="gallery-border">
                   <img src="img/single-bg.jpg" alt="">
                 </div>
-                <div class="gallery-text">
+                <div class="gallery-text flex_col">
                   <h3>Одинарні пам'ятники</h3>
                 </div>
 
@@ -197,7 +197,7 @@
                 <div class="gallery-border">
                   <img src="img/double-bg.jpg" alt="">
                 </div>
-                <div class="gallery-text">
+                <div class="gallery-text flex_col">
                   <h3>Подвійні пам'ятники</h3>
                 </div>
               </div>
@@ -205,7 +205,7 @@
                 <div class="gallery-border">
                   <img src="img/stairs-2.jpg" alt="">
                 </div>
-                <div class="gallery-text">
+                <div class="gallery-text flex_col">
                   <h3>Сходи</h3>
                 </div>
               </div>
@@ -213,7 +213,7 @@
                 <div class="gallery-border">
                   <img src="img/table.jpg" alt="">
                 </div>
-                <div class="gallery-text">
+                <div class="gallery-text flex_col">
                   <h3>Стільниці</h3>
                 </div>
               </div>
@@ -221,7 +221,7 @@
                 <div class="gallery-border">
                   <img src="img/kovka-2.jpg" alt="">
                 </div>
-                <div class="gallery-text">
+                <div class="gallery-text flex_col">
                   <h3>Ковані вироби</h3>
                 </div>
               </div>
@@ -229,7 +229,7 @@
                 <div class="gallery-border">
                   <img src="img/others.jpg" alt="">
                 </div>
-                <div class="gallery-text">
+                <div class="gallery-text flex_col">
                   <h3>Інші вироби</h3>
                 </div>
               </div>
