--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
               <div class="desc-div active">
                 <div class="photo-categ">
                   <div class="photo-border">
-                    <img src="img/tombstones.jpg" alt="">
+                    <img src="img/one-22.jpg" alt="">
                   </div>
                 </div>
                 <div class="cat-text">
